# Distributed-Cloud-File-Storage-System

./: CMakeLists.txt  LICENSE  README.md
client/: client.cpp
include/: s3_storage.h
server/: server.cpp
src/: s3_stroage.cpp
storage/: theBoss.txt
